--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
                                 <h2>{{dataValues.title}}</h2>
                                 <p>R$ {{dataValues.salary}},00</p>
                                 <span class="new-job-label">Nova</span>
-                                <a class="btn btn-primary">Ver Vaga</a>
+                                <a class="btn btn-primary" href="/jobs/view/{{dataValues.id}}">Ver Vaga</a>
                             </li>
                         {{/each}}    
                     </ul>
